k8s/fourierfun/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fourierfun
  namespace: fourierfun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fourierfun
  template:
    metadata:
      labels:
        app: fourierfun
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: fourierfun
          image: ghcr.io/r0bes/fourierfun:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
