k8s/fourierfun/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fourierfun
  namespace: fourierfun
spec:
  selector:
    app: fourierfun
  ports:
    - port: 3001
      targetPort: 3001
