k8s/fourierfun/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fourierfun
  namespace: fourierfun
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-oauth2-fourierfun@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
  ingressClassName: traefik-helm
  rules:
    - host: fourierfun.robschwe.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fourierfun
                port:
                  number: 3001
